--- a/app/src/main/res/layout/tv_show_item.xml
+++ b/app/src/main/res/layout/tv_show_item.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_8sdp"
         android:layout_marginTop="@dimen/_20sdp"
-        android:fontFamily="@font/Ubuntu_Medium"
+        android:fontFamily="@font/ubuntu_medium"
         android:includeFontPadding="false"
         android:paddingTop="@dimen/_8sdp"
         android:textColor="@color/colorTextPrimary"
@@ -51,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_3sdp"
-        android:fontFamily="@font/Ubuntu_Regular"
+        android:fontFamily="@font/ubuntu_regular"
         android:includeFontPadding="false"
         android:textColor="@color/colorTextOther"
         android:textSize="@dimen/_12ssp"
@@ -64,7 +64,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_3sdp"
-        android:fontFamily="@font/Ubuntu_Regular"
+        android:fontFamily="@font/ubuntu_regular"
         android:includeFontPadding="false"
         android:textColor="@color/colorTextSecondary"
         android:textSize="@dimen/_12ssp"
@@ -77,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_3sdp"
-        android:fontFamily="@font/Ubuntu_Regular"
+        android:fontFamily="@font/ubuntu_regular"
         android:includeFontPadding="false"
         android:textColor="@android:color/holo_green_light"
         android:textSize="@dimen/_12ssp"
