--- a/app/src/main/res/layout/activity_t_v_show_details.xml
+++ b/app/src/main/res/layout/activity_t_v_show_details.xml
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        tools:context=".repositories.TVShowDetailsActivity">
+        tools:context=".activities.TVShowDetailsActivity">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -330,5 +330,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/watchlist_img_btn"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:background="@drawable/bg_fab_shape"
+            android:src="@drawable/ic_watchclist"
+            android:padding="@dimen/_8sdp"
+            android:tint="@color/colorTextIcons"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
