--- a/app/src/main/res/layout/tv_show_item.xml
+++ b/app/src/main/res/layout/tv_show_item.xml
@@ -98,6 +98,17 @@
             app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/started_text" />
 
-
+            <ImageView
+                android:id="@+id/delete_img"
+                android:layout_width="@dimen/_22sdp"
+                android:layout_height="@dimen/_22sdp"
+                android:layout_marginEnd="@dimen/_4sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_delete"
+                android:tint="@color/colorThemeExtra"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
